<resources>
    <string name="app_name">AdHoc Pay</string>
    <string name="setup_title">Willkommen bei AdHoc Pay!</string>
    <string name="setup_intro">Mit AdHoc Pay kannst du überall und ohne Internetverbindung Geld überweisen.\nUm AdHoc Pay nutzen zu können, wähle bitte einen Nutzernamen:</string>
    <string name="setup_username">Nutzername</string>
    <string name="setup_action">Jetzt anmelden</string>
    <string name="home_credit_title">Dein Guthaben</string>
    <string name="setup_error_empty">Bitte wähle einen Nutzername</string>
    <string name="startup_image_desc">Logo</string>
    <string name="send_transaction_header">Guthaben senden</string>
    <string name="send_transaction_info">Lasse dir den Nutzernamen eines anderen Nutzers geben, um Geld an diesen zu senden.</string>
    <string name="send_transaction_value">Wert in €</string>
    <string name="send_transaction_send">Guthaben senden</string>
    <string name="register_user_exists">Nutzer existiert bereits. Bitte wähle einen anderen Nutzernamen</string>
</resources>